<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addtocart.AddToCartActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SectionHeaderTextStyle"
                android:text="@string/text_select_size" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/sizeRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/white"
                tools:itemCount="2"
                tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_size" />

            <TextView
                style="@style/SectionHeaderTextStyle"
                android:text="@string/text_special_requests" />

            <FrameLayout
                android:id="@+id/specialRequestsSectionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/white"
                android:paddingStart="20dp"
                android:paddingTop="8dp"
                android:paddingEnd="20dp"
                android:paddingBottom="12dp">

                <EditText
                    android:id="@+id/specialRequestsTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_special_requests"
                    android:inputType="textMultiLine"
                    android:paddingBottom="48dp"
                    android:textSize="14sp"
                    tools:ignore="Autofill" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/minusQtyBtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/content_desc_minus_button"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/quantityTv"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/background_circle_white"
                    android:gravity="center"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText"
                    tools:text="1" />

                <ImageButton
                    android:id="@+id/plusQtyBtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/content_desc_plus_button"
                    android:src="@drawable/ic_plus" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/saveCartButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cart_bottom_bar_button_height"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/cartQuantityTv"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:background="@drawable/background_square_border"
            android:gravity="center"
            android:minWidth="28dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:text="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_save_cart"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cartSubtotalTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="$ 40" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>